# SaperGUI

./: .gitignore  CMakeLists.txt  CustomLevelDialog.cpp  CustomLevelDialog.hpp  Game.cpp  Game.hpp  Menu.cpp  Menu.hpp  MyFrame.cpp  MyFrame.hpp  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  main.cpp
Konsola/: Alfabet.cpp  Alfabet.hpp  ConsoleApp.cpp  ConsoleApp.hpp  ConsoleGame.cpp  ConsoleGame.hpp  ConsoleMenu.cpp  ConsoleMenu.hpp
